<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="10dp"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	android:paddingTop="10dp"
	android:orientation="vertical"
	tools:context="com.kasamizu.shopingcalculater.MainActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<EditText
			android:id="@+id/resultText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="25dp"
			android:paddingRight="15dp"
			android:layout_marginTop="10dp"
			android:background="#FFCC99"
			android:inputType="number"
			android:maxLength="10"
			android:gravity="right"
			android:text="@string/default_input_number"
			android:textSize="60sp"
			/>
		<TextView
			android:id="@+id/culcType"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingRight="10dp"
			android:textSize="24sp"
			/>
		<TextView
			android:id="@+id/tempResult"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@+id/culcType"
			android:paddingTop="10dp"
			android:paddingRight="10dp"
			android:textSize="26sp"
			/>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="7dp"
		>
		<Button
			android:id="@+id/discountPerBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/discount_percent"
			android:background="@drawable/button_japanese"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text_japanese"
			/>
		<Button
			android:id="@+id/discountRateBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/discount_rate"
			android:background="@drawable/button_japanese"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text_japanese"
			/>
		<Button
			android:id="@+id/taxBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/tax"
			android:background="@drawable/button_japanese"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text_japanese"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		>
		<Button
			android:id="@+id/clearBtn"
			android:layout_width="0dp"
			android:layout_weight="2"
			android:layout_height="wrap_content"
			android:text="@string/clear_button"
			android:textSize="@dimen/button_text"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:background="@drawable/button_background"
			/>
		<Button
			android:id="@+id/clearAllBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/clear_all_button"
			android:textSize="@dimen/button_text"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:background="@drawable/button_common"
			/>
		<Button
			android:id="@+id/divisionBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/division"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		>
		<Button
			android:id="@+id/numBtn7"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_7"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn8"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_8"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn9"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_9"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/multiplicationBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/multiplication"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		>
		<Button
			android:id="@+id/numBtn4"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_4"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn5"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_5"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn6"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_6"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/subtractionBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/subtraction"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		>
		<Button
			android:id="@+id/numBtn1"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_1"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn2"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_2"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/numBtn3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_3"
			android:background="@drawable/button_common"
			android:layout_marginLeft="@dimen/button_interval"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/additionBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/addition"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="@dimen/button_interval"
			android:textSize="@dimen/button_text"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		>
		<Button
			android:id="@+id/numBtn0"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/number_0"
			android:background="@drawable/button_common"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginRight="1dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/dotBtn"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/dot"
			android:background="@drawable/button_common"
			android:layout_marginLeft="2dp"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginRight="1dp"
			android:textSize="@dimen/button_text"
			/>
		<Button
			android:id="@+id/equalBtn"
			android:layout_width="0dp"
			android:layout_weight="2"
			android:layout_height="wrap_content"
			android:text="@string/equal_button"
			android:background="@drawable/button_equal"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:layout_marginLeft="2dp"
			android:textSize="@dimen/button_text"
			/>
	</LinearLayout>
</LinearLayout>
